# PATHTRACER

./: .gitignore  CMakeLists.txt  README.md  readme.txt  test.json  transfer.txt
Source/: SDLauxiliary.h  boundingbox.cpp  boundingbox.h  camera.h  enums.h  geometry.h  intersection.h  light.h  main.cpp  material.h  math_utils.h  math_vector_utils.h  octree.cpp  octree.h  pathtrace.h  ray.h  raycast.cpp  raytrace.cpp  raytrace.h  sampler.h  scatterevent.h  scene.h  sdl_wrapper.cpp  sdl_wrapper.h  settings.h  texture.h  transferfunction.h  triangle.cpp  triangle.h  utils.cpp  vector_type.h  volume.cpp  volume.h
include/: SDLauxiliary.h  boundingbox.h  camera.h  enums.h  geometry.h  intersection.h  json.hpp  light.h  material.h  math_utils.h  math_vector_utils.h  object.h  octree.h  pathtrace.h  ray.h  raycast.h  raytrace.h  sampler.h  scatterevent.h  scene.h  sdl_wrapper.h  settings.h  texture.h  transferfunction.h  triangle.h  utils.h  vector_type.h  volume.h
include/sdl/include/SDL2/: SDL.h  SDL_audio.h  SDL_config.h  SDL_events.h  SDL_gamecontroller.h  SDL_haptic.h  SDL_hints.h  SDL_joystick.h  SDL_revision.h  SDL_sensor.h  SDL_stdinc.h  SDL_surface.h  SDL_system.h  SDL_test_assert.h  SDL_test_common.h  SDL_test_compare.h  SDL_test_harness.h  SDL_test_images.h  SDL_test_log.h  SDL_test_memory.h  SDL_thread.h  SDL_version.h  SDL_video.h  SDL_vulkan.h
include/tinytiff/: .gitignore  .gitmodules  README.md  tinytiff.Doxyfile  tinytiff.dox  tinytiff.readme  tinytiffhighrestimer.cpp  tinytiffhighrestimer.h  tinytiffreader.cpp  tinytiffreader.h  tinytiffwriter.cpp  tinytiffwriter.h
include/tinytiff/test/tinytiff_reader_test/: tinytiffreader_test.cbp
include/tinytiff/test/tinytiffwriter_test/: main.cpp  tinytiffwriter_test.cbp
